package batalla;

import ejercito.Ejercito;

public class Batalla {
	private Ejercito ejercitoAliado;
    private Ejercito ejercitoEnemico;
}
