package ejercito;

public interface Atacable {
	   public void recibirAtaque(int danio);
}
