package iota.fantasia.mapa.records;

public record Camino(int origen, int destino, int distancia) {
}
